[project]
name = "dumb-llm-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dumb-llm",
    "dumb-llm-training",
    "dumb-llm-eval",
]

[tool.uv.sources]
dumb-llm = { path = "dumb-llm-data", editable = true }
dumb-llm-training = { path = "dumb-llm-training", editable = true }
dumb-llm-eval = { path = "dumb-llm-eval", editable = true }

[tool.uv.workspace]
members = ["dumb-llm-data", "dumb-llm-training", "dumb-llm-eval"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
