[project]
name = "dumb-llm-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dumb-llm",
    "dumb-llm-training",
    "dumb-llm-eval",
]

[tool.uv.sources]
dumb-llm = { workspace = true }
dumb-llm-training = { workspace = true }
dumb-llm-eval = { workspace = true }

[tool.uv.workspace]
members = ["dumb-llm-data", "dumb-llm-training", "dumb-llm-eval"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
